--- a/gb/22/9/12/n13822968.md
+++ b/gb/22/9/12/n13822968.md
@@ -2,7 +2,7 @@
 <table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/19920513/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/19920513/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/19920513/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/19920513/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/19920513/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/19920513/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/19920513/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/19920513/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/19920513/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/19920513/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
 <tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/19920513/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/19920513/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/19920513/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
 <tr><td VALIGN=TOP width="626"><h2 align=center>泸定地震头七 仍有人未被搜出 官方做法挨轰</h2>
-<a href="https://di88ceki78g29.cloudfront.net/A3o32CQbs"><img width="600" src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/djtsp.jpg" title="进入原文观看"  alt="进入原文观看"></a><h3 align=center>(视频.国内建议下载<a href="https://github.com/19920513/www/blob/master/README.md#8">翻墙软件</a>进入原文观看)</h3>
+<a href="https://dwpf34pf0p4a8.cloudfront.net/R3t32CQbw"><img width="600" src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/djtsp.jpg" title="进入原文观看"  alt="进入原文观看"></a><h3 align=center>(视频.国内建议下载<a href="https://github.com/19920513/www/blob/master/README.md#8">翻墙软件</a>进入原文观看)</h3>
 <h6>2022年9月5日12时52分，四川省甘孜州泸定县发生6.8级地震。图为倒塌的房屋。(CFOTO/Future Publishing via Getty Images△)
 </h6>
 <hr>
@@ -15,7 +15,7 @@
 <p><strong>（听更多请至“听纪元”平台）</strong><br />
 由于中共一贯掩盖真相，外界普遍质疑其通报数据的真实性。</p>
 <p>早前，当地居民对大纪元描述其看到的现场情况：“那里的房子全塌了，有的人在房子里，有的老年人走不了，埋在房子里面。”“房屋损失严重，有人员伤亡??，具体伤亡不好说。”</p>
-<p style="text-align: center;"><a src=""></a><a href="https://di88ceki78g29.cloudfront.net/A3o32CQbs"><img width="600" src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/djtsp.jpg" title="进入原文观看"  alt="进入原文观看"></a><h3 align=center>(视频.国内建议下载<a href="https://github.com/19920513/www/blob/master/README.md#8">翻墙软件</a>进入原文观看)</h3><a src="https://www.youmaker.com/embed/2405f69c-4a8d-43ed-a006-f74ef50c19cb?r=16x9&amp;d=39" width="600" b="360" frameborder="0" allowfullscreen="allowfullscreen" data-mce-fragment="1"></a></p>
+<p style="text-align: center;"><a src=""></a><a href="https://dwpf34pf0p4a8.cloudfront.net/R3t32CQbw"><img width="600" src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/djtsp.jpg" title="进入原文观看"  alt="进入原文观看"></a><h3 align=center>(视频.国内建议下载<a href="https://github.com/19920513/www/blob/master/README.md#8">翻墙软件</a>进入原文观看)</h3><a src="https://www.youmaker.com/embed/2405f69c-4a8d-43ed-a006-f74ef50c19cb?r=16x9&amp;d=39" width="600" b="360" frameborder="0" allowfullscreen="allowfullscreen" data-mce-fragment="1"></a></p>
 <p>民众遭遇灾难，官方却阻拦外界援助。<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E7%94%98%E5%AD%9C%E5%B7%9E.md#1">甘孜州</a>泸定县地震当天（5日），该州疫情指挥部宣布，对地震重灾区泸定县、海螺沟实施全域临时管控，参与救援的人员必须持24小时阴性核酸证明，而且不接受社会救援力量参与抢险救灾。</p>
 <p>网民撰文，痛斥官方以“白纸黑字，铁证如山，实在刷新了反人类史上的一大空白！”“敢问甘孜州有关领导，你们还是人吗？你们这群挨千刀的，虽然可能进不了史书，必定难逃现世的报应！你们猛于虎、毒过蛇，你们才是不折不扣的大病毒！”</p>
 <p>除了拒绝援助，中共中央网信办甚至打压传播地震相关消息的民众。</p>
@@ -26,46 +26,46 @@
 <p>他还说，四川地震时，民众不被允许出去避震，不能逃命，当地以疫情防控为由让民众待在家里。“二十大前后，被封锁的应该不止是四川地震的真相，还包括各地疫情的真相、封闭的情况也会被竭力掩盖。”</p>
 <p>资深时事评论员唐靖远6日接受大纪元记者采访时表示，中共当局实施全域管控，是在防疫的同时防止地震真相泄露，中共官员为执行政治任务不惜草菅人命。“为了所谓政治安全而无视人命关天的举动，不知道会有多少本来有机会得救的人会因此而丧失机会。”</p>
 <p>中国地震台官方微博12日消息，截至12日早上8时，四川泸定6.8级地震共记录到余震2715次，其中3.0级及以上余震16次，包括2次4级以上余震，最大余震4.5级。</p>
-<p style="text-align: center;"><a src=""></a><a href="https://di88ceki78g29.cloudfront.net/A3o32CQbs"><img width="600" src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/djtsp.jpg" title="进入原文观看"  alt="进入原文观看"></a><h3 align=center>(视频.国内建议下载<a href="https://github.com/19920513/www/blob/master/README.md#8">翻墙软件</a>进入原文观看)</h3><a src="https://www.youmaker.com/embed/38ef20e2-713f-464f-9fc8-0a8851e29f73?r=16x9&amp;d=57" width="600" b="360" frameborder="0" allowfullscreen="allowfullscreen" data-mce-fragment="1"></a></p>
+<p style="text-align: center;"><a src=""></a><a href="https://dwpf34pf0p4a8.cloudfront.net/R3t32CQbw"><img width="600" src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/djtsp.jpg" title="进入原文观看"  alt="进入原文观看"></a><h3 align=center>(视频.国内建议下载<a href="https://github.com/19920513/www/blob/master/README.md#8">翻墙软件</a>进入原文观看)</h3><a src="https://www.youmaker.com/embed/38ef20e2-713f-464f-9fc8-0a8851e29f73?r=16x9&amp;d=57" width="600" b="360" frameborder="0" allowfullscreen="allowfullscreen" data-mce-fragment="1"></a></p>
 <p>责任编辑：林琮文#</p>
 	
 <hr>
 <hr>
 
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/21/n13955058.md#1">【全球新闻】习普会登场 中美俄隔空角力</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/20/n13954668.md#1">东航空难一周年 中共通报称事故“极为罕见”</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/20/n13954469.md#1">甘肃张掖遇沙尘暴 “沙墙”滚滚高达百米</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/19/n13953443.md#1">【环球直击】普京突访乌克兰占领区马里乌波尔</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/4/3/n13964226.md#1">大陆恶性事件频发?重庆男子持刀无差别砍人</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/4/1/n13963378.md#1">中国5董座4高管一个月内接连病亡 均不到60岁</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/4/1/n13963229.md#1">大陆直播主街头采访“你会上前线吗”舆论翻车</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/31/n13962711.md#1">【晚间新闻】河北邯郸驾车撞人案 伤亡或惨重</a></li>
 <hr>
 
 
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank">善良女子被中共投男牢</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/6/17/n11326982.md#1" target="_blank">金言：香港反送中会引发“蝴蝶效应”？</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/4/11/n11178933.md#1" target="_blank">亚利桑那媒体：中共强摘器官对美国有何影响</a></li><hr>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank">从大师到徒弟的传奇</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/1/25/n10085548.md#1" target="_blank">郑兢业：人吃与吃人（一 ）</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/7/23/n11405058.md#1" target="_blank">生死劫后 中共酷刑幸存者吁中国人了解真相</a></li><hr>
 
 
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/15/n13950568.md#1">明末改朝换代关帝君显灵  天命不可违人算不如天算</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/16/n13951783.md#1">挣脱监控 新西兰中领馆出逃员工心路历程</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/18/n13952758.md#1">【未解之谜】别找了 外星人早来地球了</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/14/n13949868.md#1">【古道人生】古代一些被权贵家庭看不起的穷女婿</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/15/n13950328.md#1">【未解之谜】消失的《小人国》</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/20/n13954705.md#1">【热点互动】习普会 北京再批美国民主</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/20/n13954366.md#1">【中国禁闻】中国现同时感染两种毒株患者 专家解读</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/20/n13954365.md#1">【全球新闻】协议达成 瑞士银行将收购瑞士信贷</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/18/n13953298.md#1">中国女篮国手被曝当小三 多次发照片诱惑领队</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/17/n13952121.md#1">Costco退货政策最慷慨 但11类商品不能退</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/18/n13952900.md#1">F-35战机有三大优势 歼-20和苏-57望尘莫及</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/18/n13953323.md#1">大陆配音圈大地震 姜广涛等4人被爆涉刑事犯罪</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/19/n13953953.md#1">御用配音员姜广涛被捕 刘恺威近十年作品恐下架</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/19/n13953394.md#1">帮坤达庆生 被喊艺界扶龙王 柯佳嬿幽默回应</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/19/n13953476.md#1">草蜢隔13年登台开唱 张小燕与2位歌王都到场</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/20/n13954264.md#1">李多海与SE7EN官宣结婚 5月举办婚礼</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/15/n13950837.md#1">年龄大听力一定差？6类护耳食物要多吃</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/19/n13953544.md#1">父母如何让小孩听从指令？ 专家分享三招</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/7/n13944686.md#1">洗蔬果简单又好用的方法 让你不再吃进农药</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/6/n13944006.md#1">穿出职场业务力 改变穿搭好运随之而来</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/17/n13952244.md#1">组图：台湾最美最长的黄金、翠绿双隧道</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/2/27/n13939508.md#1">一代圣主康熙的教子“心法”</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/28/n13960551.md#1">【未解之谜】海奥华预言（1）外星人眼中的创世</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/16/n13951411.md#1">明朝两则轮回转生的故事</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/24/n13957760.md#1">【古道人生】灾荒中新婚妻子卖身救夫最终得团圆</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/12/n13948717.md#1">汉宫的明珠——王昭君</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/4/1/n13963438.md#1">【时事人物】从任性少年到ChatGPT新乌托邦教主</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/4/1/n13962992.md#1">【车评】橙黄之色 2023 Toyota Tacoma TRD Pro</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/4/1/n13963361.md#1">【时事金扫描】川普被起诉牵涉大 解读混乱局势</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/4/1/n13963229.md#1">大陆直播主街头采访“你会上前线吗”舆论翻车</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/31/n13962292.md#1">海南变香港？专家：党比法大 难造自由港</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/4/1/n13962933.md#1">分析：养儿防老被中共破坏 老人何去何从</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/31/n13962773.md#1">分享冻龄秘笈遭酸民攻击 伊能静高EQ回应</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/31/n13962350.md#1">孙艺真与玄彬结婚一周年 IG发照片庆祝</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/31/n13962807.md#1">张国立现身大学开讲 自称是院长 网络炸锅</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/31/n13962841.md#1">淡出歌坛四年 60岁王杰近况曝光</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/4/1/n13963429.md#1">9岁时曾遭绑架 张艾嘉儿子首次吐露心声</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/31/n13962544.md#1">研究：每天锻炼20分钟有效降低住院风险</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/31/n13962445.md#1">研究：具侵略性的恶犬比较可能有坏主人</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/31/n13962417.md#1">血糖失控会掉发 2方法有助逆转秃头</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/31/n13962591.md#1">常服安眠药痴呆风险增8成  专家荐“神奇助眠剂”</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/31/n13962594.md#1">这几种食物加辣酱 味道超乎想像</a></li>
 <hr>
 
 <strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/19920513/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/19920513/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/22/9/12/n13822968.htm">泸定地震头七 仍有人未被搜出 官方做法挨轰</a></p><hr>
